styles/styles.css
/*
 * Copyright 2020 Adobe. All rights reserved.
 * This file is licensed to you under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License. You may obtain a copy
 * of the License at http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under
 * the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
 * OF ANY KIND, either express or implied. See the License for the specific language
 * governing permissions and limitations under the License.
 */

/* Size adjust to better match Adobe Clean */
@font-face {
  font-family: 'Trebuchet MS';
  size-adjust: 95%;
  src: local('Trebuchet MS'),
       local('TrebuchetMS');
       font-weight: 700;
}

@font-face {
  font-family: 'Trebuchet MS';
  size-adjust: 87%;
  src: local('Trebuchet MS'),
       local('TrebuchetMS');
       font-weight: 400;
}

 :root {
  /* colors */
  --color-white: #FFF;
  --color-gray-100: #F8F8F8;
  --color-gray-200: #E8E8E8;
  --color-gray-300: #D4D4D4;
  --color-gray-400: #B6B6B6;
  --color-gray-500: #909090;
  --color-gray-600: #686868;
  --color-gray-700: #444;
  --color-gray-800: #242424;
  --color-black: #000;
  --color-brand-title: #000B1D;
  --color-info-accent: #5C5CE0;
  --color-info-accent-hover: #4646C6;
  --color-info-accent-down: #3D3DB4;
  --color-info-accent-light: #DEDEF9;
  --text-color: #2c2c2c;
  --link-color: #035fe6;
  --link-hover-color: #136ff6;
  --background-color: #fff;
  --overlay-background-color: #eee;
  --highlight-background-color: #ccc;

  /* fonts */
  --body-font-family: 'adobe-clean', 'Trebuchet MS', sans-serif;
  --heading-font-family: var(--body-font-family);
  --fixed-font-family: 'Roboto Mono', menlo, consolas, 'Liberation Mono', monospace;

  /* body sizes */
  --body-background-color: var(--color-white);
  --body-alt-background-color: var(--color-gray-600);
  --body-font-weight: 400;
  --body-color: var(--color-black);
  --body-line-height: 1.5;
  --body-font-size-xxl: 1.75rem; /* 28px */
  --body-font-size-xl: 1.375rem; /* 22px */
  --body-font-size-l: 1.25rem; /* 20px */
  --body-font-size-m: 1.125rem; /* 18px */
  --body-font-size-s: 1rem; /* 16px */
  --body-font-size-xs: 0.875rem; /* 14px */
  --body-font-size-xxs: 0.75rem; /* 12px */

  /* heading sizes */
  --heading-font-weight: 700;
  --heading-color: var(--color-gray-800);
  --heading-line-height: 1.25;
  --heading-font-size-xxxl: 5rem; /* 80px */
  --heading-font-size-xxl: 2.75rem; /* 44px */
  --heading-font-size-xl: 2.25rem; /* 36px */
  --heading-font-size-l: 1.75rem; /* 28px */
  --heading-font-size-m: 1.5rem; /* 24px */
  --heading-font-size-s: 1.25rem; /* 20px */
  --heading-font-size-xs: 1.125rem; /* 18px */

  /* nav height */
  --nav-height: 64px;

  /* details */
  --detail-font-weight: 700;
  --detail-color: var(--color-gray-600);
  --detail-line-height: 1.25;
  --detail-font-size-l: 1.25rem; /* 20px */
  --detail-font-size-m: 1rem; /* 16px */
  --detail-font-size-s: 0.75rem; /* 12px */

  /* Spacing */
  --spacing-xxs: 8px;
  --spacing-xs: 16px;
  --spacing-s: 24px;
  --spacing-m: 32px;
  --spacing-l: 48px;
  --spacing-xl: 56px;
  --spacing-xxl: 80px;

  /* grid sizes */
  --grid-container-width: 83.4%;
  --grid-column-width: calc(var(--grid-container-width) / 12);
}

@media (min-width: 900px) {
  :root {
    --heading-font-size-xxxl: 3.75rem; /* 60px */
  }
}

@media (min-width: 1200px) {
  :root {
    --heading-font-size-xxxl: 2.75rem; /* 44px */
  }
}

@media (max-width: 1440px) {
  :root {
    --grid-container-width: 1200px;
  }
}

body {
  background-color: var(--body-background-color);
  font-family: var(--body-font-family);
  font-size: var(--body-font-size-m);
  color: var(--body-color);
  margin: 0;
  padding: 0;
  line-height: var(--body-line-height);
  display: none;
}

body.appear {
  display: unset;
}

header {
  display: flex;
  position: fixed;
  top: 0;
  width: 100%;
  height: var(--nav-height);
  background-color: var(--color-white);
  z-index: 3;
}

h1, h2, h3,
h4, h5, h6 {
  font-family: var(--heading-font-family);
  font-weight: 600;
  line-height: 1.25;
  margin-top: 1em;
  margin-bottom: .5em;
  scroll-margin: calc(var(--nav-height) + 1em);
}

h1 { font-size: var(--heading-font-size-xxl) }
h2 { font-size: var(--heading-font-size-xl) }
h3 { font-size: var(--heading-font-size-l) }
h4 { font-size: var(--heading-font-size-m) }
h5 { font-size: var(--heading-font-size-s) }
h6 { font-size: var(--heading-font-size-xs) }

p, dl, ol, ul, pre, blockquote {
  margin-top: 1em;
  margin-bottom: 1em;
}

hr {
  margin-top: 1.5em;
  margin-bottom: 1.5em;
  border: 0;
  border-bottom: 1px solid var(--overlay-background-color);
}

code, pre, samp {
  font-family: var(--fixed-font-family);
  font-size: var(--body-font-size-s);
}

code, samp {
  background-color: var(--overlay-background-color);
  padding: 1em;
  border-radius: .25em;
}

pre code, pre samp {
  padding: 0;
  background-color: transparent;
  border-radius: 0;
}

pre {
  overflow: scroll;
}

main pre {
  background-color: var(--overlay-background-color);
  padding: 1em;
  border-radius: .25em;
  overflow-x: auto;
  white-space: pre;
}

a:any-link {
  color: var(--link-color);
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
  color: var(--link-hover-color);
}

/* buttons */
a.button:any-link, button {
  text-decoration: none;
  border-radius: 2rem;
  border: 2px solid transparent;
  padding: 6px 1rem;
  text-align: center;
  font-size: var(--body-font-size-s);
  font-style: normal;
  font-weight: 600;
  cursor: pointer;
  color: var(--color-white);
  background-color: var(--color-info-accent);
  margin: 16px 0;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: inline-block;
}

a.button:hover, a.button:focus, button:hover, button:focus  {
  background-color: var(--color-info-accent-hover);
  cursor: pointer;
}
/* ... */

